--- a/src/components/NoteViewOptions/NoteViewOptions.css
+++ b/src/components/NoteViewOptions/NoteViewOptions.css
@@ -1,22 +1,22 @@
-h4 {
-  font-size: 1.1rem;
+.optionTitle {
+  font-size: 1rem;
   text-align: center;
   margin: 0;
-  padding: 9px 6px;
+  padding: 6px;
 }
 .viewOptions {
   text-align: center;
-  width: 85%;
-  max-width: 480px;
+  width: 100%;
+  max-width: 500px;
   margin: 9px auto;
-  padding: 9px;
+  padding: 6px;
 }
 .chooseTopic,
 .viewByDate {
   display: inline-block;
   border: 1px solid grey;
   width: 50%;
-  max-width: 180px;
+  max-width: 200px;
   margin: 9px 6px;
   padding: 6px;
 }
