--- a/src/components/Roster/Roster.css
+++ b/src/components/Roster/Roster.css
@@ -1,5 +1,6 @@
 .rosterItem {
   border: 1px solid grey;
+  border-radius: 9px;
   width: 85%;
   max-width: 480px;
   margin: 9px auto;
@@ -12,3 +13,25 @@ h3 {
   margin: 0;
   padding: 9px 15px;
 }
+.div1 {
+  background-color: rgb(186, 195, 255);
+}
+.div2 {
+  background-color: rgb(168, 255, 168);
+}
+.div3 {
+  background-color: rgb(248, 185, 185);
+}
+.div4 {
+  background-color: rgb(252, 214, 143);
+}
+.div5 {
+  background-color: rgb(255, 255, 156);
+}
+.div6 {
+  background-color: rgb(240, 145, 240);
+}
+.div7 {
+  background-color: rgb(157, 252, 252);
+}
+
