student sessions by date functioning

--- a/src/components/StudentDetails/StudentDetailsDisplay.css
+++ b/src/components/StudentDetails/StudentDetailsDisplay.css
@@ -4,7 +4,7 @@
   text-align: left;
   border: 1px solid grey;
   margin: 15px auto;
-  padding: 15px;
+  padding: 6px 15px;
 }
 .editStudent {
   float: right;
