--- a/src/components/NoteViewOptions/NoteViewOptions.css
+++ b/src/components/NoteViewOptions/NoteViewOptions.css
@@ -9,7 +9,7 @@
   width: 100%;
   max-width: 500px;
   margin: 9px auto;
-  padding: 6px;
+  padding: 0;
 }
 .chooseTopic,
 .viewByDate {
@@ -17,6 +17,6 @@
   border: 1px solid grey;
   width: 50%;
   max-width: 200px;
-  margin: 9px 6px;
+  margin: 6px;
   padding: 6px;
 }
