--- a/src/components/TeacherViewStudent/TeacherViewStudent.css
+++ b/src/components/TeacherViewStudent/TeacherViewStudent.css
@@ -4,31 +4,46 @@ header.top {
   width: 90%;
   max-width: 500px;
   margin: 6px auto;
-  padding: 9px;
+  padding: 0;
+  position: relative;
 }
 header h2 {
-  margin: 0;
+  margin: 15px 0 0 0;
+}
+.toDashboard {
+  position: absolute;
+  top: 3px;
+  right: 3px;
 }
 .stdName {
   font-size: 1.7rem;
   font-weight: 600;
   font-style: italic;
-  margin: 3px;
-}
-h4 { 
-  font-size: 1.2rem;
-  margin: 6px;
+  margin: 0px;
 }
 .newLesson {
-  text-align: center;
-  background-color: rgb(235, 235, 235);
-  border: 1px solid grey;
-  border-radius: 9px;
-  width: 75%;
-  max-width: 400px;
+  font-size: 1rem;
+  width: 70%;
+  max-width: 300px;
   margin: 9px auto;
-  padding: 9px;
+  padding: 6px;
 }
 .newLesson:hover {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
+.previousLessons h4 { 
+  font-size: 1.2rem;
+  margin: 0;
+  padding: 0;
+}
+.previousLessons{
+  text-align: center;
+  background-color: rgb(235, 235, 235);
+  border: 1px solid grey;
+  border-radius: 6px;
+  width: 95%;
+  max-width: 540px;
+  margin: 24px auto 3px auto;
+  padding: 0;
+}
+
