--- a/src/components/NewLessonPage/NewTopic.css
+++ b/src/components/NewLessonPage/NewTopic.css
@@ -1,16 +1,20 @@
 .addNewTopic {
   float: right;
-  border-radius: 15px;
+  border-radius: 9px;
+  padding: 3px 6px;
+  line-height: 1.2rem;
 }
 .plus {
   font-size: 1.2rem;
+  line-height: 0.3rem;
   font-weight: 600;
   vertical-align: center;
 }
-.topicsArea{
+#topicsArea{
   width: 98%;
+  min-height: 100px;
   border: 4px solid rgb(228, 228, 228);
-  border-radius: 15px;
+  border-radius: 9px;
   margin: 12px auto;
 }
 .notesField {
@@ -22,4 +26,7 @@
   margin: 30px auto;
   padding: 6px;
   background-color:rgb(235, 235, 235);
+}
+.otherBox {
+  display: inline-block;
 }
