--- a/src/components/SingleLessonView/SingleLessonView.css
+++ b/src/components/SingleLessonView/SingleLessonView.css
@@ -6,49 +6,57 @@ header.lessonTitle {
   margin: 6px auto;
   padding: 6px;
 }
-.lessonTopicTitleA,
-.lessonTopicTitleB,
-.mockLessonTopicTitleA {
+.lessonTitle p {
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin: 4px 0;
+}
+.italic {
+  font-style: italic;
+  font-weight: 400;
+}
+
+.lessonTopicDiv {
   border: 1px solid grey;
+  text-align: left;
   width: 85%;
   max-width: 480px;
   margin: 9px auto;
 }
-h3 {      
-  margin: 0;
-  padding: 9px 15px;
-  position: relative;
-}
-.arrowpointers {
-  font-size: 2.7rem;
-  line-height: 1.7rem;
-  position: absolute;
-  right: 0;
-}
-.toggleShowHide,
-.mockShowHide {
+.topicHeader {
   background-color: lightgrey;
+  margin: 0;
+  padding: 6px 9px;
+}
+.topicTitle {  
+  font-size: 1rem;
+  background-color: lightgrey;
+  text-align: left;    
   margin: 0;
   padding: 0;
 }
-.toggleShowHide:hover,
-.mockShowHide:hover {
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+.italicspan {
+  font-style: italic;
 }
 .topicDetails {
   padding: 6px 12px;
 }
-h4 {
+.topicDetails p {
+  margin: 0;
+}
+.nextSessionTitle {
   font-size: 1.2rem;
   margin: 0;
-  padding: 9px 6px;
+  padding: 0;
 }
-
 .nextSessionDetails {
   text-align: left;
   border: 1px solid grey;
   width: 85%;
   max-width: 480px;
   margin: 6px auto;
-  padding: 3px 9px;
+  padding: 9px 15px;
+}
+.nextSessionDetails p {
+  margin: 6px 0;
 }
