--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,41 +1,66 @@
-.top {
+.landingPageTop {
   text-align: center;
-  background-color: lightgray;
+  background-color: rgb(127, 243, 127);
   width: 90%;
-  max-width: 500px;
-  margin: 12px auto;
-  padding: 9px;
+  margin: 9px auto;
+  padding: 6px;
+}
+h1 {
+  margin: 12px 0;
 }
 .tempGoTo {
   font-size: 1.2rem;
   font-style: italic;
   font-weight: 600;
+  color: black;
   border: 1px solid grey;
-  width: 70%;
-  max-width: 440px;
-  margin: 12px auto;
+  width: 75%;
+  max-width: 330px;
+  margin: 24px auto;
   text-align: center;
-  padding: 15px 0;
+  padding: 9px 0;
 }
 .tempGoTo:hover {
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 9px 0 rgba(0, 0, 0, 0.15);
+  background-color: rgb(135, 253, 135)
+  }
+.tempP {
+  margin: 6px 0;
 }
-.loginForm {
-  border: 2px dashed lightgray;
-  background-color: rgb(247, 247, 247);
-  width: 70%;
-  max-width: 440px;
-  margin: 15px auto;
-  text-align: center;
-  padding: 48px 0px;
-  
+.tempP:hover {
+  color: green;
 }
 .appInfo {
-  width: 70%;
+  width: 80%;
   max-width: 400px;
   background-color: rgb(232, 245, 250);
   border-radius: 60px;
-  margin: 12px auto;
+  margin: 6px auto;
   text-align: center;
-  padding: 9px;
+  padding: 6px;
+}
+.trackerAbout {
+  font-size: 1.4rem;
+  line-height: 1.6rem;
+  margin: 9px 0;
+}
+.appInfoP {
+  font-size: 1rem;
+  line-height: 1.3rem;
+}
+
+@media only screen and (min-width: 450px){
+  .landingPageTop {
+    max-width: 600px;
+    margin: 18px auto;
+    padding: 6px;
+  }
+  .tempGoTo{
+    max-width: 300px;
+  }
+  .appInfo {
+    max-width: 480px;
+  }
+
+
 }
