--- a/src/components/NewLessonPage/NewTopic.css
+++ b/src/components/NewLessonPage/NewTopic.css
@@ -13,20 +13,37 @@
 #topicsArea{
   width: 98%;
   min-height: 100px;
-  border: 4px solid rgb(228, 228, 228);
+  border: 4px solid tan;
   border-radius: 9px;
-  margin: 12px auto;
-}
-.notesField {
-  display: block;
+  margin: 9px 0;
+  text-align: left;
 }
 .newTopic {
   width: 95%;
-  max-width: 440px;
-  margin: 30px auto;
+  margin: 18px auto;
   padding: 6px;
-  background-color:rgb(235, 235, 235);
+  background-color:tan;
+  border-radius: 6px;
 }
 .otherBox {
   display: inline-block;
+  background-color: whitesmoke;
 }
+.notesField {
+  background-color: whitesmoke;
+  margin-top: 9px;
+}
+
+@media only screen and (min-width: 450px){
+  .newTopic {
+    width: 65%;
+    max-width: 440px;
+  }
+  .notesField {
+    width: 80%;
+    max-width: 330px;
+  }
+  
+
+}
+
