--- a/src/components/Roster/Roster.css
+++ b/src/components/Roster/Roster.css
@@ -2,14 +2,17 @@
   border: 1px solid grey;
   border-radius: 9px;
   width: 85%;
-  max-width: 480px;
+  max-width: 400px;
   margin: 9px auto;
   padding: 9px;
+  background-color: white;
+  text-align: center;
 }
 .rosterItem:hover {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
-h3 {
+.stdLink {
+  color: rgb(82, 82, 82);
   margin: 0;
   padding: 9px 15px;
 }
