--- a/src/components/StudentDetails/StudentDetailsDisplay.css
+++ b/src/components/StudentDetails/StudentDetailsDisplay.css
@@ -1,10 +1,12 @@
 .studentDetails {
   width: 85%;
-  max-width: 480px;
+  max-width: 420px;
   text-align: left;
   border: 1px solid grey;
+  border-radius: 3px;
   margin: 15px auto;
   padding: 6px 15px;
+  background-color: white;
 }
 .editStudent {
   float: right;
