--- a/src/components/StudentViews/StudentDashboard.css
+++ b/src/components/StudentViews/StudentDashboard.css
@@ -1,10 +1,12 @@
-.top {
-  background-color: rgb(235, 235, 235);
+.stdDashTop {
+  background-color: rgb(127, 243, 127);
   text-align: center;
   width: 90%;
-  max-width: 500px;
-  margin: 6px auto;
-  padding: 9px;
+  margin: 9px auto;
+  padding: 6px;
+}
+.stdDashtitle {
+  font-size: 1.5rem;
 }
 .teacherDetails {
   text-align: left;
@@ -14,7 +16,14 @@
   margin: 15px auto;
   padding: 15px;
 }
-h3 { 
+.teacherInfoTitle { 
   text-align: center;
   font-size: 1.2rem;
+}
+@media only screen and (min-width: 450px){
+  .stdDashTop {
+    max-width: 600px;
+    margin: 18px auto;
+    padding: 6px;
+  }
 }
