--- a/src/components/TeacherViewStudent/TeacherViewStudent.css
+++ b/src/components/TeacherViewStudent/TeacherViewStudent.css
@@ -1,28 +1,34 @@
-header.top {
-  background-color: rgb(235, 235, 235);
+.stdTop {
+  background-color: rgb(3, 158, 158);
   text-align: center;
   width: 90%;
-  max-width: 500px;
   margin: 6px auto;
-  padding: 0;
+  padding: 0 0 12px 0;
   position: relative;
 }
-header h2 {
-  margin: 15px 0 0 0;
+.stdTopTitle {
+  padding-top: 24px;
+  font-size: 1.6rem;
+  color: rgb(70, 70, 70);
+  margin: 0;
 }
 .toDashboard {
   position: absolute;
-  top: 3px;
-  right: 3px;
+  top: 1px;
+  right: 2px;
 }
 .stdName {
   font-size: 1.7rem;
+  color: rgb(70, 70, 70);
   font-weight: 600;
   font-style: italic;
   margin: 0px;
 }
 .newLesson {
   font-size: 1rem;
+  font-weight: 600;
+  background-color: tan;
+  color: rgb(55, 55, 55);
   width: 70%;
   max-width: 300px;
   margin: 9px auto;
@@ -30,20 +36,36 @@ header h2 {
   border-radius: 3px;
 }
 .newLesson:hover {
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 9px 0 rgba(0, 0, 0, 0.15);
 }
 .previousLessons {
-  max-width: 540px;
+  width: 95%;
   margin: 24px auto;
   padding: 0 0 60px 0;
-  border: 3px solid lightsteelblue;
-  border-radius: 3px;
+  border: 4px solid tan;
+  background-color: white;
+  min-height: 180px;
+  border-radius: 9px;
 }
 .previousLessonsTitle{
   text-align: center;
-  background-color: lightsteelblue;
+  background-color: tan;
+  color: rgb(55, 55, 55);
   font-size: 1.2rem;
   margin: 0;
-  padding: 6px;
+  padding: 6px 0 9px 0;
+}
+@media only screen and (min-width: 450px){
+  .stdTop {
+    width: 98%;
+    max-height: 80px;
+    margin: 0;
+    padding: 9px;
+  }
+  .stdTopTitle {
+    padding-top: 9px;
+    margin: 0;
+  }
+  
 }
 
