--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,28 @@ a {
 .App {
   text-align: center;
 }
+
+@media only screen and (min-width: 450px){
+
+.App {
+  background-color: rgb(233, 233, 193);
+  border: 9px solid rgb(3, 158, 158);
+  width: 85%;
+  min-height: 600px;
+  padding: 0;
+  margin: 0 auto;
+}
+
+}
+
+@media only screen and (min-width: 750px){
+  .App {
+    background-color: rgb(233, 233, 193);
+    border: 0;
+    width: 100%;
+    min-height: 600px;
+    padding: 0;
+    margin: 0;
+  }
+    
+}
