--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,19 +1,21 @@
 .landingPageTop {
   text-align: center;
-  background-color: rgb(127, 243, 127);
+  background-color: rgb(3, 158, 158);
   width: 90%;
   margin: 9px auto;
   padding: 6px;
 }
 h1 {
   margin: 12px 0;
+  color: rgb(55,55,55);
 }
 .tempGoTo {
   font-size: 1.2rem;
   font-style: italic;
   font-weight: 600;
-  color: black;
+  color: rgb(55,55,55);
   border: 1px solid grey;
+  background-color: tan;
   width: 75%;
   max-width: 330px;
   margin: 24px auto;
@@ -22,7 +24,7 @@ h1 {
 }
 .tempGoTo:hover {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 9px 0 rgba(0, 0, 0, 0.15);
-  background-color: rgb(135, 253, 135)
+  background-color: rgb(232, 245, 250);
   }
 .tempP {
   margin: 6px 0;
@@ -51,9 +53,9 @@ h1 {
 
 @media only screen and (min-width: 450px){
   .landingPageTop {
-    max-width: 600px;
-    margin: 18px auto;
-    padding: 6px;
+    width: 100%;
+    padding: 6px 0;
+    margin: 0;
   }
   .tempGoTo{
     max-width: 300px;
@@ -62,5 +64,8 @@ h1 {
     max-width: 480px;
   }
 
+}
 
+@media only screen and (min-width: 700px){
+  
 }
