--- a/src/components/SingleLessonView/SingleLessonView.css
+++ b/src/components/SingleLessonView/SingleLessonView.css
@@ -2,21 +2,18 @@
   background-color: rgb(3, 158, 158);
   text-align: center;
   width: 90%;
-  margin: 9px auto;
-  padding: 2px;
-}
-.toOv {
-  float: right;
+  margin: 6px auto;
+  padding: 0 0 12px 0;
 }
 .singleLessonTitle{
   font-size: 1.6rem;
   font-weight: 700;
-  margin: 0;
+  margin: 15px;
 }
 .singleLessonP{
   font-size: 1.2rem;
   font-weight: 500;
-  margin: 0;
+  margin: 6px 0;
 }
 .italic {
   font-style: italic;
@@ -66,7 +63,7 @@
   background-color: white;
   width: 85%;
   max-width: 480px;
-  margin: 6px auto;
+  margin: 12px auto;
   padding: 9px 15px;
 }
 .nextSessionDetails p {
@@ -80,4 +77,44 @@
     padding: 3px 0;
   }
   
+}
+@media only screen and (min-width: 840px) {
+  
+.row2 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 100%;
+  width: 100%;
+  overflow-y: hidden;
+  margin: 0;
+  padding-top: 15px;
+}
+.columnA2 {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+  min-width: 304px;
+  max-width: 525px;
+  overflow: auto;
+  padding-left: 24px;
+}
+.columnB2 {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 2;
+  height: 100%;
+  min-width: 450px;
+  overflow-y: auto;
+  margin: 0;
+}
+.lessonTopicDiv {
+  width: 85%;
+  max-width: 600px;
+  margin: 15px auto;
+}
+
+
 }
