--- a/src/components/TeacherViewStudent/TeacherViewStudent.css
+++ b/src/components/TeacherViewStudent/TeacherViewStudent.css
@@ -15,7 +15,7 @@
 .toDashboard {
   position: absolute;
   top: 1px;
-  right: 2px;
+  right: 3px;
 }
 .stdName {
   font-size: 1.7rem;
@@ -69,3 +69,47 @@
   
 }
 
+@media only screen and (min-width: 840px) {
+  .stdTop {
+    width: 100%;
+  }
+  .toDashboard {
+    position: absolute;
+    top: 6px;
+    right: 21px;
+  }
+  
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 100%;
+  width: 100%;
+  overflow-y: hidden;
+  margin: 0;
+  padding-top: 15px;
+}
+.columnA {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 2;
+  min-width: 304px;
+  max-width: 525px;
+  overflow: auto;
+}
+.columnB {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 3;
+  height: 100%;
+  min-width: 450px;
+  overflow-y: auto;
+  margin: 0;
+}
+.previousLessons {
+  width: 90%;
+  margin: 12px auto;
+}
+}
