--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@ a {
 }
 .App {
   text-align: center;
+  background-color: rgb(233, 233, 193);
+  padding-bottom: 60px;
+  padding-top: 15px;
 }
 
 @media only screen and (min-width: 450px){
@@ -14,6 +17,7 @@ a {
   width: 85%;
   min-height: 600px;
   padding: 0;
+  padding-bottom: 60px;
   margin: 0 auto;
 }
 
@@ -26,6 +30,7 @@ a {
     width: 100%;
     min-height: 600px;
     padding: 0;
+    padding-bottom: 60px;
     margin: 0;
   }
     
