--- a/src/components/TeacherViewStudent/TeacherViewStudent.css
+++ b/src/components/TeacherViewStudent/TeacherViewStudent.css
@@ -1,24 +1,25 @@
 .stdTop {
   background-color: rgb(3, 158, 158);
   text-align: center;
-  width: 90%;
-  margin: 6px auto;
-  padding: 0 0 12px 0;
+  width: 100%;
+  margin: 0 0 9px 0;
+  padding: 9px 0;
   position: relative;
 }
 .stdTopTitle {
-  padding-top: 24px;
+  padding-top: 21px;
   font-size: 1.6rem;
   color: rgb(70, 70, 70);
   margin: 0;
 }
 .toDashboard {
   position: absolute;
-  top: 1px;
-  right: 3px;
+  top: 2px;
+  right: 12px;
 }
 .stdName {
   font-size: 1.7rem;
+  line-height: 1.9rem;
   color: rgb(70, 70, 70);
   font-weight: 600;
   font-style: italic;
@@ -57,28 +58,20 @@
 }
 @media only screen and (min-width: 450px){
   .stdTop {
-    width: 98%;
+    width: 100%;
     max-height: 80px;
     margin: 0;
-    padding: 9px;
+    padding: 9px 0;
   }
   .stdTopTitle {
-    padding-top: 9px;
+    padding-top: 6px;
     margin: 0;
   }
   
 }
 
 @media only screen and (min-width: 840px) {
-  .stdTop {
-    width: 100%;
-  }
-  .toDashboard {
-    position: absolute;
-    top: 6px;
-    right: 21px;
-  }
-  
+
 .row {
   display: flex;
   flex-direction: row;
