--- a/src/components/SingleLessonView/SingleLessonView.css
+++ b/src/components/SingleLessonView/SingleLessonView.css
@@ -1,10 +1,12 @@
 .specificLessonTop {
-  background-color: rgb(3, 158, 158);
+  background-color: rgba(3, 158, 158, 0.7);
   text-align: center;
   width: 100%;
   margin: 0 auto 9px auto;
-  padding: 9px 0;
+  padding: 6px 0;
+  max-height: 60px;
   position: relative;
+  box-shadow: 0 8px 6px -6px black;
 }
 .toDashboard {
   position: absolute;
@@ -15,6 +17,8 @@
 .singleLessonTitle{
   font-size: 1.6rem;
   font-weight: 700;
+  color: rgb(70, 70, 70);
+  margin: 9px 0;
 }
 .singleLessonP{
   font-size: 1.2rem;
@@ -27,7 +31,7 @@
 }
 .lessonTopicDiv {
   border: 1px solid grey;
-  border-radius: 9px;
+  border-radius: 4px;
   text-align: left;
   width: 85%;
   max-width: 480px;
@@ -35,8 +39,8 @@
 }
 .topicHeader {
   background-color: tan;
-  border-top-left-radius: 9px;
-  border-top-right-radius: 9px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
   margin: 0;
   padding: 6px 9px;
 }
@@ -52,8 +56,8 @@
 .topicDetails {
   padding: 9px 12px;
   background-color: white;
-  border-bottom-right-radius: 9px;
-  border-bottom-left-radius: 9px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 .topicDetails p {
   margin: 3px;
