--- a/src/components/TeacherDashboard/TeacherDashboard.css
+++ b/src/components/TeacherDashboard/TeacherDashboard.css
@@ -1,14 +1,18 @@
 .dashTop {
-  background-color: rgb(3, 158, 158);
+  background-color: rgba(3, 158, 158, 0.7);
   text-align: center;
   width: 100%;
+  height: 60px;
+  max-height: 60px;
   margin: 0px auto 9px auto;
   padding: 6px 0;
+  box-shadow: 0 8px 6px -6px black;
 }
 .dashbdHead {
   color: rgb(70, 70, 70);
   font-size: 1.6rem;
-  margin: 0 6px;
+  margin: 12px 0;
+
 }
 .newLesson2 {
   font-size: 1rem;
@@ -22,14 +26,15 @@
   border-radius: 3px;
 }
 .newLesson2:hover {
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 9px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 9px 0 rgba(0, 0, 0, 0.3);
 }
 
 .addNewStd {
-  border: 1px solid grey;
   width: 90%;
   max-width: 500px;
   margin: 9px auto;
+  border: 1px solid grey;
+  border-radius: 3px;
 }
 .addStudentFormHeader:hover {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
