--- a/src/components/TeacherViewStudent/TeacherViewStudent.css
+++ b/src/components/TeacherViewStudent/TeacherViewStudent.css
@@ -1,10 +1,12 @@
 .stdTop {
-  background-color: rgb(3, 158, 158);
+  background-color: rgba(3, 158, 158, 0.7);
   text-align: center;
   width: 100%;
+  max-height: 60px;
   margin: 0 0 9px 0;
-  padding: 9px 0;
+  padding: 6px 0;
   position: relative;
+  box-shadow: 0 8px 6px -6px black;
 }
 .stdTopTitle {
   padding-top: 21px;
@@ -19,7 +21,7 @@
 }
 .stdName {
   font-size: 1.7rem;
-  line-height: 1.9rem;
+  line-height: 1.7rem;
   color: rgb(70, 70, 70);
   font-weight: 600;
   font-style: italic;
