--- a/src/components/NewLessonPage/NewTopic.css
+++ b/src/components/NewLessonPage/NewTopic.css
@@ -13,7 +13,7 @@
 #topicsArea{
   width: 98%;
   min-height: 100px;
-  border: 4px solid tan;
+  border: 4px solid rgba(210, 180, 140, 0.9);
   border-radius: 9px;
   margin: 9px 0;
   text-align: left;
@@ -22,7 +22,7 @@
   width: 95%;
   margin: 18px auto;
   padding: 6px;
-  background-color:tan;
+  background-color:rgba(210, 180, 140, 0.9);
   border-radius: 6px;
 }
 .otherBox {
