--- a/src/components/NewStudentForm/NewStudentForm.css
+++ b/src/components/NewStudentForm/NewStudentForm.css
@@ -1,6 +1,6 @@
 
 .addStudentFormHeader {
-  background-color: tan;
+  background-color: rgba(210, 180, 140, 0.6);
   padding: 0;
 }
 .newStdHeader {
