--- a/src/components/SingleLessonView/SingleLessonView.css
+++ b/src/components/SingleLessonView/SingleLessonView.css
@@ -38,7 +38,7 @@
   margin: 15px auto;
 }
 .topicHeader {
-  background-color: tan;
+  background-color: rgba(210, 180, 140, 0.6);
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   margin: 0;
@@ -69,7 +69,8 @@
 }
 .nextSessionDetails {
   text-align: left;
-  border: 2px solid grey;
+  border: 2px solid lightgrey;
+  border-style: inset;
   background-color: white;
   width: 85%;
   max-width: 480px;
