--- a/src/components/StudentDetails/StudentDetailsEdit.css
+++ b/src/components/StudentDetails/StudentDetailsEdit.css
@@ -14,7 +14,7 @@
   margin-left: 6px;
 }
 .updateStudent {
-  background-color: tan;
+  background-color: rgba(210, 180, 140, 0.6);
 }
 .cancelUpdate {
   background-color: coral;
