--- a/src/components/TeacherViewStudent/TeacherViewStudent.css
+++ b/src/components/TeacherViewStudent/TeacherViewStudent.css
@@ -30,7 +30,7 @@
 .newLesson {
   font-size: 1rem;
   font-weight: 600;
-  background-color: tan;
+  background-color: rgba(210, 180, 140, 0.6);
   color: rgb(55, 55, 55);
   width: 70%;
   max-width: 300px;
@@ -45,14 +45,14 @@
   width: 95%;
   margin: 24px auto;
   padding: 0 0 60px 0;
-  border: 4px solid tan;
+  border: 4px solid rgb(210, 180, 140);
   background-color: white;
   min-height: 180px;
   border-radius: 9px;
 }
 .previousLessonsTitle{
   text-align: center;
-  background-color: tan;
+  background-color: rgba(210, 180, 140, 0.9);
   color: rgb(55, 55, 55);
   font-size: 1.2rem;
   margin: 0;
