--- a/src/components/NewLessonPage/NewLessonPage.css
+++ b/src/components/NewLessonPage/NewLessonPage.css
@@ -2,12 +2,10 @@
   background-color: rgba(3, 158, 158, 0.7);
   text-align: center;
   width: 100%;
-  margin: 0 auto 9px auto;
-  padding: 9px;
+  margin: 0;
+  padding: 9px 18px;
   position: relative;
-  height: 60px;
-  max-height: 60px;
-  box-shadow: 0 8px 6px -6px black;
+  box-shadow: 0 6px 6px -4px rgb(27, 27, 27);
 }
 .backToDash{
   position: absolute;
@@ -20,7 +18,8 @@
   max-width: 300px;
 }
 .newLessonHead {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
+  line-height: 1.7rem;
   margin: 15px 0 9px 0;
   color: rgb(70, 70, 70);
 }
@@ -28,7 +27,7 @@
   border: 1px solid grey;
   border-radius: 6px;
   width: 94%;
-  margin: 12px auto;
+  margin: 18px auto 12px auto;
   padding: 9px;
 }
 #sessionDate {
@@ -46,17 +45,21 @@
 }
 .result {
   font-size: 1.3rem;
-  line-height: 2.7rem;
-  color: grey;
-  width: 45%;
+  line-height: 1.3rem;
+  font-style: italic;
+  color: rgb(97, 97, 97);
+  width: 80%;
   margin: 0px auto;
 }
 .goToStudent{
-  background-color: aquamarine;
-  border: 2px solid lightgray;
+  background-color: rgb(45, 223, 199);
+  border: 2px solid rgb(151, 151, 151);
+  font-style: normal;
   border-radius: 27px;
-  width: 55%;
-  margin: 3px auto;
+  width: 80%;
+  margin: 6px auto;
+  padding: 6px 3px;
+
 }
 .goToStudent:hover {
   border: 3px solid grey;
@@ -64,10 +67,10 @@
 
 @media only screen and (min-width: 450px){
   .newLessonTop {
-    width: 99%;
-    height: 80px;
-    padding: 6px;
+    width: 100%;
+    max-height: 80px;
     margin: 0;
+    padding: 9px 0;
   }
   .sessionNotes {
     max-width: 550px;
