--- a/src/components/SingleLessonView/SingleLessonView.css
+++ b/src/components/SingleLessonView/SingleLessonView.css
@@ -2,11 +2,10 @@
   background-color: rgba(3, 158, 158, 0.7);
   text-align: center;
   width: 100%;
-  margin: 0 auto 9px auto;
-  padding: 6px 0;
-  max-height: 60px;
+  margin: 0;
+  padding: 9px 18px;
   position: relative;
-  box-shadow: 0 8px 6px -6px black;
+  box-shadow: 0 6px 6px -4px rgb(27, 27, 27);
 }
 .toDashboard {
   position: absolute;
@@ -15,15 +14,15 @@
 }
 
 .singleLessonTitle{
-  font-size: 1.6rem;
-  font-weight: 700;
+  font-size: 1.5rem;
+  line-height: 1.7rem;
+  margin: 15px 0 9px 0;
   color: rgb(70, 70, 70);
-  margin: 9px 0;
 }
 .singleLessonP{
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: 500;
-  margin: 6px 0;
+  margin: 15px 0 6px 0;
 }
 .italic {
   font-style: italic;
@@ -83,9 +82,9 @@
 @media only screen and (min-width: 450px){
   .specificLessonTop {
     width: 100%;
-    height: 80px;
+    max-height: 80px;
     margin: 0;
-    padding: 3px 0;
+    padding: 9px 0;
   }
   
 }
