--- a/src/components/TeacherDashboard/TeacherDashboard.css
+++ b/src/components/TeacherDashboard/TeacherDashboard.css
@@ -2,17 +2,15 @@
   background-color: rgba(3, 158, 158, 0.7);
   text-align: center;
   width: 100%;
-  height: 60px;
-  max-height: 60px;
-  margin: 0px auto 9px auto;
-  padding: 6px 0;
-  box-shadow: 0 8px 6px -6px black;
+  margin: 0;
+  padding: 9px 18px;
+  box-shadow: 0 6px 6px -4px rgb(27, 27, 27);
 }
 .dashbdHead {
   color: rgb(70, 70, 70);
-  font-size: 1.6rem;
-  margin: 12px 0;
-
+  font-size: 1.5rem;
+  line-height: 1.7rem;
+  margin: 9px 15px;
 }
 .newLesson2 {
   font-size: 1rem;
@@ -21,7 +19,7 @@
   color: rgb(55, 55, 55);
   width: 70%;
   max-width: 300px;
-  margin: 9px auto;
+  margin: 18px auto 12px auto;
   padding: 9px;
   border-radius: 3px;
 }
@@ -54,10 +52,10 @@
 }
 @media only screen and (min-width: 450px){
   .dashTop {
-    width: 98%;
+    width: 100%;
     max-height: 80px;
     margin: 0;
-    padding: 9px;
+    padding: 12px 0;
   }
 }
 @media only screen and (min-width: 840px) {
