--- a/src/components/TeacherViewStudent/TeacherViewStudent.css
+++ b/src/components/TeacherViewStudent/TeacherViewStudent.css
@@ -2,15 +2,15 @@
   background-color: rgba(3, 158, 158, 0.7);
   text-align: center;
   width: 100%;
-  max-height: 60px;
-  margin: 0 0 9px 0;
-  padding: 6px 0;
+  margin: 0 0 15px 0;
+  padding: 6px;
   position: relative;
-  box-shadow: 0 8px 6px -6px black;
+  box-shadow: 0 6px 6px -4px rgb(27, 27, 27);
 }
 .stdTopTitle {
-  padding-top: 21px;
-  font-size: 1.6rem;
+  padding-top: 15px;
+  font-size: 1.5rem;
+  line-height: 1.7rem;
   color: rgb(70, 70, 70);
   margin: 0;
 }
@@ -34,7 +34,7 @@
   color: rgb(55, 55, 55);
   width: 70%;
   max-width: 300px;
-  margin: 9px auto;
+  margin: 18px auto 9px auto;
   padding: 9px;
   border-radius: 3px;
 }
@@ -66,7 +66,7 @@
     padding: 9px 0;
   }
   .stdTopTitle {
-    padding-top: 6px;
+    padding-top: 12px;
     margin: 0;
   }
 }
