--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,18 @@ a {
 }
 .App {
   text-align: center;
+  width: 100%;
   background-color: rgb(233, 233, 193);
   padding-bottom: 60px;
   padding-top: 15px;
+  margin: 0;
 }
 
 @media only screen and (min-width: 450px){
 
 .App {
   background-color: rgb(233, 233, 193);
-  border: 9px solid rgb(3, 158, 158);
+  border: 9px solid rgba(3, 158, 158, 0.7);
   width: 85%;
   min-height: 600px;
   padding: 0;
