--- a/src/components/NewLessonPage/NewTopic.css
+++ b/src/components/NewLessonPage/NewTopic.css
@@ -11,39 +11,48 @@
   vertical-align: center;
 }
 #topicsArea{
-  width: 98%;
+  width: 100%;
   min-height: 100px;
-  border: 4px solid rgba(210, 180, 140, 0.9);
-  border-radius: 9px;
+  border-top: 2px solid rgba(70, 70, 70, 0.7);
+  border-bottom: 2px solid rgba(70, 70, 70, 0.7);
   margin: 9px 0;
-  text-align: left;
+  display: flex;
+  flex-flow: row wrap;
+  align-content: space-around;
 }
 .newTopicArea {
   width: 95%;
-  margin: 18px auto;
+  min-height: 140px;
+  margin: 18px 9px;
   padding: 6px;
-  background-color:rgba(210, 180, 140, 0.9);
-  border-radius: 6px;
+  background-color: rgba(236, 236, 195, 0.6);
+  border-radius: 3px;
+  box-shadow: 0 3px 6px 2px rgba(0,0,0,0.3);
+}
+.topicOption {
+  display: inline-block;
+  background-color: rgb(250, 250, 250);
+}
+.otherLabel {
+  font-size: 0.9rem;
+  display: inline-block;
 }
 .otherBox {
   display: inline-block;
-  background-color: whitesmoke;
+  background-color: rgb(250, 250, 250);
 }
+
 .anotherNotesField {
-  background-color: whitesmoke;
+  width: 98%;
+  background-color: rgb(250, 250, 250);
   margin-top: 9px;
 }
 
+
 @media only screen and (min-width: 450px){
   .newTopicArea {
-    width: 65%;
-    max-width: 440px;
-  }
-  .anotherNotesField {
-    width: 90%;
-    max-width: 360px;
-  }
-  
+    max-width: 400px;
+  }  
+
 
 }
-
